--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -4,18 +4,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@android:color/white">
 
 
     <TextView
         android:id="@+id/tv_original_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorMovieTitle"
         android:padding="16dp"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="20sp"
         tools:text="Movie Title"/>
 
     <android.support.v7.widget.RecyclerView
