--- a/app/src/main/res/layout/trailer_list_item_header.xml
+++ b/app/src/main/res/layout/trailer_list_item_header.xml
@@ -2,8 +2,8 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -17,26 +17,43 @@
 
         <ImageView
             android:id="@+id/iv_thumbnail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="200dp"
             android:contentDescription="@string/thumbnail"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:orientation="vertical"
             android:paddingLeft="16dp"
             android:paddingRight="16dp">
 
             <TextView
-                android:id="@+id/tv_rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
                 android:id="@+id/tv_release_date"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                tools:text="release date"/>
+
+            <TextView
+                android:id="@+id/tv_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                tools:text="rating"
+                android:layout_marginBottom="16dp"/>
+
+            <Button
+                android:id="@+id/btn_favorite"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_selector"
+                android:drawableLeft="@android:drawable/star_big_on"
+                android:padding="8dp"
+                android:text="@string/button_favorite_text"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"
+                android:layout_gravity="bottom"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -57,13 +74,14 @@
         android:background="@color/colorListDelimiter"/>
 
     <TextView
+        android:id="@+id/tv_trailer_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingStart="16dp"
-        android:paddingRight="16dp"
-        android:paddingEnd="16dp"
         android:paddingBottom="8dp"
+        android:paddingEnd="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingStart="16dp"
         android:text="@string/trailer_list_title"
         android:textSize="20sp"/>
 </LinearLayout>
