--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,11 +4,16 @@
     <item
         android:id="@+id/mi_most_popular"
         android:orderInCategory="1"
-        android:title="@string/most_popular"
+        android:title="@string/menu_item_most_popular"
         app:showAsAction="never"/>
     <item
         android:id="@+id/mi_top_rated"
         android:orderInCategory="2"
-        android:title="@string/top_rated"
-    app:showAsAction="never"/>
+        android:title="@string/menu_item_top_rated"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/mi_favorite"
+        android:orderInCategory="3"
+        android:title="@string/menu_item_favorite"
+        app:showAsAction="never"/>
 </menu>
