--- a/app/src/main/res/layout/trailer_list_item_header.xml
+++ b/app/src/main/res/layout/trailer_list_item_header.xml
@@ -82,21 +82,20 @@
         android:textSize="14sp"
         tools:text="Movie overview"/>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_margin="16dp"
-        android:background="@color/colorListDelimiter"/>
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:layout_margin="16dp"-->
+        <!--android:background="@color/colorListDelimiter"/>-->
 
     <TextView
         android:id="@+id/tv_trailer_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="8dp"
-        android:paddingEnd="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingStart="16dp"
+        android:layout_marginTop="8dp"
+        android:padding="16dp"
+        android:background="@color/colorMovieTitle"
+        android:textColor="@android:color/white"
         android:text="@string/trailer_list_title"
         android:textSize="20sp"/>
 </LinearLayout>
