--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -8,6 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@drawable/list_item_selector"
     android:paddingLeft="16dp"
     android:paddingStart="16dp"
     android:paddingRight="16dp"
@@ -17,8 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="8dp"
-        android:background="@drawable/list_item_selector">
+        android:paddingTop="8dp">
 
         <ImageView
             android:id="@+id/iv_play"
