Correcr favorite button behaviour

--- a/app/src/main/res/layout/trailer_list_item_header.xml
+++ b/app/src/main/res/layout/trailer_list_item_header.xml
@@ -43,31 +43,11 @@
                 tools:text="rating"
                 android:layout_marginBottom="16dp"/>
 
-            <Button
-                android:id="@+id/btn_favorite"
+            <ImageView
+                android:id="@+id/iv_favorite_star"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_selector"
-                android:drawableLeft="@mipmap/ic_favorite_star"
-                android:text="@string/mark_text"
-                android:textColor="@android:color/white"
-                android:paddingRight="8dp"
-                android:paddingEnd="8dp"
-                android:textSize="12sp"
-                android:layout_gravity="bottom"/>
-
-            <Button
-                android:id="@+id/btn_unfavorite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@mipmap/ic_favorite_star"
-                android:text="@string/unmark_text"
-                android:textColor="@android:color/white"
-                android:paddingRight="8dp"
-                android:paddingEnd="8dp"
-                android:textSize="12sp"
-                android:background="@drawable/button_selector"
-                android:visibility="gone"/>
+                app:srcCompat="@mipmap/ic_favorite_star_disable"/>
 
         </LinearLayout>
 
